assets/css/mainMenu.css
/* Sets bg vid attributes */
#background-video {
    position: absolute;
    width: 100%;
    height: 100%;
    object-fit: cover;
    background-image: url(../media/give-us-an-a++++.jpg);
    height: 100dvh;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

/* Sets h1 text font */
h1 {
    font-family: 'Comic Sans MS', cursive;
}

/* Makes box color transparent */
.bg-op {
    background-color: #000000d2;
}

